# brewster_v2

./: .gitignore  Brewster_v2_Tutorial_1_ClassIntro.ipynb  Brewster_v2_Tutorial_2_Make_a_Spectrum.ipynb  Brewster_v2_Tutorial_3_R_file_template.ipynb  Brewster_v2_Tutorial_4_Retrieval_Analysis.ipynb  Brewster_v2_Tutorial_5_multinest_prior_intro.ipynb  Brewster_v2_tutorial.ipynb  CMakeLists.txt  Prior_setting_demo.ipynb  Priors.py  Priors_new_trial.py  README.md  TPmod.py  bens_mcmc_570D.py  brewster_retrieval_test_mcmc.py  brewster_retrieval_test_multinest.py  brewster_run.py  brewtools.py  check_brewster.py  clddiff.dif  cloud_dic.py  cloud_dic_new.py  cloud_memfix.ipynb  cloud_memfix_patchycloud_tobefixed.ipynb  clouds_mod.f90  code_test.py  common_arrays_mod.f90  define_types_mod.f90  gas_nonuniform.py  gas_opacity_mod.f90  main_mod.f90  marv.f90  mcmc_template.py  mcnuggets_TEMPLATE.py  modelspec.ipynb  multinest_template.py  nugbits_TEMPLATE.py  pyproject.toml  retrieval_run.py  settings.py  (+6 more)
brewster/: band.py  bensconv.py  brewtools.py  check_brewster.py  cloud.py  cloud_dic.py  code_test.py  retrieval_run.py  test_module.py  utils.py
data/: gaslistR10K_newCH4.dat~
examples/: Brewster_v2_tutorial.ipynb  README.md
examples/G570D_emcee/: mcmc_G570D.py  slurm_script.sh
examples/G570D_nested/: multinest_G570D.py
examples/example_data/: G570D_R_file.txt  code_test_R_file.txt
examples/nuggets/: mcnuggets_TEMPLATE.py  mcnuggets_nc.py  test_nuggets.ipynb
examples/plotting_notebooks/: plot_Deck_NEST_TEMPLATE.ipynb  plot_postproduct_corner_TEMPLATE.ipynb  v2_cloudy_plot_template.ipynb
scripts/: mcmc_GJ_slabmgsio3_deckfe_ptype7_no_inversion_nonuni_crh.py  mcmc_GJ_slabmgsio3_deckfe_ptype7_nonuni_crh.py  mcmc_GJ_slabsio2_deckfe_ptype7_nonuni_crh_no_inversion.py  mcmc_GJ_slabsio2_slabmg2sio4_deckfe_ptype7_nonuni_crh_no_inversion.py  mcmc_GJ_slabsio_deckfe_ptype7_no_inversion_nonuni_crh_reinitialised.py  mcmc_GJ_slabsio_deckfe_ptype7_nonuni_crh.py  mcmc_GJ_slabsio_slabmg2sio4_deckfe_ptype7_no_inversion_nonuni_crh.py  mcmc_GJ_slabsio_slabmg2sio4_deckfe_ptype7_nonuni_crh_reinitialised_again.py  mcmc_GJ_slabsio_slabmgsio3_deckfe_ptype7_no_inversion_nonuni_crh.py  mcmc_GJ_slabsio_slabmgsio3_deckfe_ptype7_nonuni_crh.py  mcmc_GJ_slabsio_slabsio2_deckfe_ptype7_no_inversion_nonuni_crh.py  mcmc_SDSS_slabmg2sio4_deckfe_ptype7_no_inversion_nonuni_crh.py  mcmc_SDSS_slabmg2sio4_deckfe_ptype7_with_nonuni_crh.py  mcmc_SDSS_slabmgsio3_deckfe_ptype7_no_inversion_nonuni_crh_reinitialised.py  mcmc_SDSS_slabmgsio3_deckfe_ptype7_nonuni_crh.py  mcmc_SDSS_slabmgsio3_slabmg2sio4_deckfe_ptype7_no_inversion_nonuni_crh.py  mcmc_SDSS_slabmgsio3_slabmg2sio4_deckfe_ptype7_with_nonuni_crh.py  mcmc_SDSS_slabmgsio3_slabsio2_deckfe_ptype7_no_inversion_nonuni_crh.py  mcmc_SDSS_slabmgsio3_slabsio2_deckfe_ptype7_nonuni_crh.py  mcmc_SDSS_slabsio_deckfe_ptype7_no_inversion_nonuni_crh.py  mcmc_SDSS_slabsio_deckfe_ptype7_nonuni_crh.py  mcmc_SDSS_slabsio_slabmg2sio4_deckfe_ptype7_no_inversion_nonuni_crh.py  mcmc_SDSS_slabsio_slabmg2sio4_deckfe_ptype7_nonuni_crh.py
src/brewster/: TPmod.py  bensconv.py  brewtools.py  check_brewster.py  cloud_dic.py  code_test.py  retrieval_run.py  test_module.py  utils.py
src/fortran/: bbconv.f90  marv.f90
src/python/: code_test.py  test_module.py  utils.py
summary_tables_GJ/: GJ_all_model_summaries.csv  GJ_all_model_summaries_old.csv
summary_tables_SDSS/: SDSS_all_model_summaries.csv  SDSS_all_model_summaries_old.csv
